Pretty much finish 4.2

--- a/thesis/jlcode.sty
+++ b/thesis/jlcode.sty
@@ -1049,6 +1049,7 @@ literate=
 {→}{{\ucc{${\rightarrow}$}}}{2}
 {←}{{\ucc{${\leftarrow}$}}}{2}
 {⤳}{{\ucc{${\leadsto}$}}}{2}
+{′}{{\ucc{${{}^\prime}$}}}{1}
 % {⩪}{{\ucc{${\dot\mathtt{\sim}}$}}}{1}
 %
 % box drawing characters
