--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -360,6 +360,24 @@
   series = {Wiley Series in Probability and Statistics}
 }
 
+@inproceedings{cusumano-towner2019gen,
+  title = {Gen: A General-Purpose Probabilistic Programming System with Programmable Inference},
+  shorttitle = {Gen},
+  booktitle = {Proceedings of the 40th {{ACM SIGPLAN Conference}} on {{Programming Language Design}} and {{Implementation}}},
+  author = {Cusumano-Towner, Marco F. and Saad, Feras A. and Lew, Alexander K. and Mansinghka, Vikash K.},
+  date = {2019-06-08},
+  pages = {221--236},
+  publisher = {{Association for Computing Machinery}},
+  location = {{New York, NY, USA}},
+  doi = {10.1145/3314221.3314642},
+  url = {https://doi.org/10.1145/3314221.3314642},
+  urldate = {2020-11-28},
+  abstract = {Although probabilistic programming is widely used for some restricted classes of statistical models, existing systems lack the flexibility and efficiency needed for practical use with more challenging models arising in fields like computer vision and robotics. This paper introduces Gen, a general-purpose probabilistic programming system that achieves modeling flexibility and inference efficiency via several novel language constructs: (i) the generative function interface for encapsulating probabilistic models; (ii) interoperable modeling languages that strike different flexibility/efficiency trade-offs; (iii) combinators that exploit common patterns of conditional independence; and (iv) an inference library that empowers users to implement efficient inference algorithms at a high level of abstraction. We show that Gen outperforms state-of-the-art probabilistic programming systems, sometimes by multiple orders of magnitude, on diverse problems including object tracking, estimating 3D body pose from a depth image, and inferring the structure of a time series.},
+  file = {/home/philipp/Zotero/storage/97E92J32/Cusumano-Towner et al_2019_Gen.pdf},
+  isbn = {978-1-4503-6712-7},
+  series = {{{PLDI}} 2019}
+}
+
 @thesis{cusumano-towner2020gen,
   title = {Gen: {{A High}}-{{Level Programming Platform}} for {{Probabilistic Inference}}},
   author = {Cusumano-Towner, Marco Francis},
@@ -568,6 +586,15 @@
   file = {/home/philipp/Zotero/storage/VBU87IF4/Girolami_Calderhead_2011_Riemann manifold Langevin and Hamiltonian Monte Carlo methods.pdf;/home/philipp/Zotero/storage/EDMRBNC9/j.1467-9868.2010.00765.html},
   langid = {english},
   number = {2}
+}
+
+@inproceedings{gonzalez2011parallel,
+  title = {Parallel Gibbs Sampling: {{From}} Colored Fields to Thin Junction Trees},
+  booktitle = {Proceedings of the Fourteenth International Conference on Artificial Intelligence and Statistics},
+  author = {Gonzalez, Joseph and Low, Yucheng and Gretton, Arthur and Guestrin, Carlos},
+  date = {2011},
+  pages = {324--332},
+  file = {/home/philipp/Zotero/storage/TB3VPHNA/Gonzalez et al. - Parallel Gibbs Sampling From Colored Fields to Th.pdf}
 }
 
 @online{goodman2012church,
